# ML_OPS_test

./: Dockerfile  README  lasso_model.pkl  linear_model.pkl  pyproject.toml  ridge_model.pkl
data/: energy_data.csv  weather_data.csv
iPynb Files/: Schinder.ipynb
src/: app.py  model_evaluation.py  model_training.py  preprocessing.py
